# ria-platform

./: BUILD_STATUS.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  PROGRESS_REPORT.md  README.md  STATUS.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  config.rs  error.rs  generation.rs  layer_loading.rs  lib.rs  model.rs  tokenizer.rs
crates/gguf/: Cargo.toml
crates/gguf/src/: error.rs  header.rs  lib.rs  metadata.rs  quantization.rs  tensor.rs
crates/gguf/tests/: gguf_parser_test.rs
crates/server/: Cargo.toml
crates/server/src/: app_router.rs  handlers.rs  lib.rs  server.rs  types.rs
