[package]
name = "ria-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RIA HTTP API server - OpenAI-compatible endpoints"

[dependencies]
ria-core.workspace = true
ria-gguf.workspace = true
candle-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures = "0.3"
tokio-stream = "0.1"
